--- a/zhuce.html
+++ b/zhuce.html
@@ -8,38 +8,40 @@
 </head>
 <body>
 <div class="zhuce1">
-    <div class="zhuce1_top">
-        <a href="">使用手机号码注册</a>
-    </div>
-    <div class="zhuce1_bottom">
-        <div class="zhuce1_one">
-            <label for="iphone">手机号：</label>
-            <input id="iphone" type="text">
+    <div class="zhuce1_in">
+        <div class="zhuce1_top">
+            <a href="">使用手机号码注册</a>
         </div>
-        <div class="zhuce1_two">
-            <label for="password1">设定密码：</label>
-            <input id="password1" type="text">
-        </div>
-        <div class="zhuce1_three">
-            <label for="password2">确认密码：</label>
-            <input id="password2" type="text">
-        </div>
-        <div class="zhuce1_four">
-            <label for="yanzheng">验证码：</label>
-            <input id="yanzheng" type="text">
-        </div>
-        <div class="zhuce1_five">
-            <label for="iyanzheng">手机验证码：</label>
-            <input id="iyanzheng" type="text">
-        </div>
-        <div class="zhuce1_six">
-            <input type="text" checked="checked">
-            <span>我已经阅读并接受</span>
-            <span><a href="">《威猛男士服务条款》</a></span>
-        </div>
-        <div class="zhuce1_seven">
-            <input type="text" value="提交">
-            <a href="">返回登录</a>
+        <div class="zhuce1_bottom">
+            <div class="zhuce1_one">
+                <label for="iphone">手机号：</label>
+                <input id="iphone" type="text">
+            </div>
+            <div class="zhuce1_two">
+                <label for="password1">设定密码：</label>
+                <input id="password1" type="text">
+            </div>
+            <div class="zhuce1_three">
+                <label for="password2">确认密码：</label>
+                <input id="password2" type="text">
+            </div>
+            <div class="zhuce1_four">
+                <label for="yanzheng">验证码：</label>
+                <input id="yanzheng" type="text">
+            </div>
+            <div class="zhuce1_five">
+                <label for="iyanzheng">手机验证码：</label>
+                <input id="iyanzheng" type="text">
+            </div>
+            <div class="zhuce1_six">
+                <input type="text" checked="checked">
+                <span>我已经阅读并接受</span>
+                <span><a href="">《威猛男士服务条款》</a></span>
+            </div>
+            <div class="zhuce1_seven">
+                <input type="text" value="提交">
+                <a href="">返回登录</a>
+            </div>
         </div>
     </div>
 </div>
