--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <i class="iconfont icon-zhuce"></i>
             <p>注册</p>
         </a>
-        <a href="">
+        <a href="person.html">
             <i class="iconfont icon-wode"></i>
             <p>我的</p>
         </a>
