--- a/shop.html
+++ b/shop.html
@@ -5,91 +5,128 @@
     <title>Title</title>
     <!--引入main.css-->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="files/css/font-awesome.min.css">
+    <!--引入矢量图标-->
+    <link rel="stylesheet" href="css/iconfont.css">
 </head>
 <body>
 <!--header1部分-->
 <div class="header1_father">
     <div class="header1">
-        <a href="">热点品牌<span>HOT</span></a>
+        <ul>
+            <li><a class="active" href="javascript:;">职业正装<em class="em"></em></a></li>
+            <li><a href="javascript:;">投资<em></em></a></li>
+            <li><a href="javascript:;">政策<em></em></a></li>
+            <li><a href="javascript:;">地区<em></em></a></li>
+        </ul>
     </div>
 </div>
-
-<!--main部分-->
-<div class="max">
-<div class="main clearfix">
-    <a href="content.html">
-        <dl>
-            <dt>
-                <img src="img/main_one.jpg" alt="">
-            </dt>
-            <dd>罗蒙男装</dd>
-            <dd class="fg">商务休闲</dd>
-        </dl>
-    </a>
-    <a href="javascript:;">
-        <dl class="no">
-            <dt>
-                <img src="img/main_two.jpg" alt="">
-            </dt>
-            <dd>佐纳利男装</dd>
-            <dd class="fg">商务休闲</dd>
-        </dl>
-    </a>
-    <a href="javascript:;">
-        <dl>
-            <dt>
-                <img src="img/main_three.jpg" alt="">
-            </dt>
-            <dd>SASLAX男装</dd>
-            <dd class="fg">英伦风格</dd>
-        </dl>
-    </a>
-    <a href="javascript:;">
-        <dl class="no">
-            <dt>
-                <img src="img/main_four.jpg" alt="">
-            </dt>
-            <dd>它钴男装</dd>
-            <dd class="fg">商务休闲</dd>
-        </dl>
-    </a>
-    <a href="javascript:;">
-        <dl>
-            <dt>
-                <img src="img/main_five.jpg" alt="">
-            </dt>
-            <dd>卧虎藏龙男装</dd>
-            <dd class="fg">英伦风格</dd>
-        </dl>
-    </a>
-    <a href="javascript:;">
-        <dl class="no">
-            <dt>
-                <img src="img/main_six.jpg" alt="">
-            </dt>
-            <dd>秋意浓男装</dd>
-            <dd class="fg">职业正装</dd>
-        </dl>
-    </a>
-    <a href="javascript:;">
-        <dl>
-            <dt>
-                <img src="img/main_seven.jpg" alt="">
-            </dt>
-            <dd>富绅男装</dd>
-            <dd class="fg">商务休闲</dd>
-        </dl>
-    </a>
-    <a href="javascript:;">
-        <dl class="no">
-            <dt>
-                <img src="img/main_eight.jpg" alt="">
-            </dt>
-            <dd>添多利男装</dd>
-            <dd class="fg">职业正装</dd>
-        </dl>
-    </a>
+<!--shop部分-->
+<div class="shop">
+    <div class="shop_one">
+        <div class="shop_one_top">
+            <a href="content.html">
+                <img src="img/shop_one.jpg" alt="">
+            </a>
+        </div>
+        <div class="shop_one_bottom">
+            <dl>
+                <dt class="left">品牌：<span>罗蒙</span></dt>
+                <dt>地区：<span>宁波</span></dt>
+                <dt>投资：<span>30万以上</span></dt>
+            </dl>
+            <dl>
+                <dt class="left">风格：<span>职业正装，商务休闲</span></dt>
+                <dt>定位：<span>中档偏上</span></dt>
+                <dt>政策：<span>送装修、免加盟费</span></dt>
+            </dl>
+        </div>
+    </div>
+    <div class="shop_one">
+        <div class="shop_one_top">
+            <a href="javascript:;">
+                <img src="img/shop_two.jpg" alt="">
+            </a>
+        </div>
+        <div class="shop_one_bottom">
+            <dl>
+                <dt class="left">品牌：<span>博布莱斯</span></dt>
+                <dt>地区：<span>西安</span></dt>
+                <dt>投资：<span>30万以上</span></dt>
+            </dl>
+            <dl>
+                <dt class="left">风格：<span>职业正装，商务休闲</span></dt>
+                <dt>定位：<span>中高档</span></dt>
+                <dt>政策：<span>暂不公开</span></dt>
+            </dl>
+        </div>
+    </div>
+    <div class="shop_one">
+        <div class="shop_one_top">
+            <a href="javascript:;">
+                <img src="img/shop_three.jpg" alt="">
+            </a>
+        </div>
+        <div class="shop_one_bottom">
+            <dl>
+                <dt class="left">品牌：<span>乔夫</span></dt>
+                <dt>地区：<span>上海</span></dt>
+                <dt>投资：<span>30万以上</span></dt>
+            </dl>
+            <dl>
+                <dt class="left">风格：<span>职业正装，商务休闲</span></dt>
+                <dt>定位：<span>中高档</span></dt>
+                <dt>政策：<span>免加盟费、需保证金</span></dt>
+            </dl>
+        </div>
+    </div>
+    <div class="shop_one">
+        <div class="shop_one_top">
+            <a href="javascript:;">
+                <img src="img/shop_four.jpg" alt="">
+            </a>
+        </div>
+        <div class="shop_one_bottom">
+            <dl>
+                <dt class="left">品牌：<span>博铂</span></dt>
+                <dt>地区：<span>上海</span></dt>
+                <dt>投资：<span>20万-30万</span></dt>
+            </dl>
+            <dl>
+                <dt class="left">风格：职业正装，商务休闲<span></span></dt>
+                <dt>定位：<span>中高档</span></dt>
+                <dt>政策：<span>免加盟、需保证金</span></dt>
+            </dl>
+        </div>
+    </div>
 </div>
+<!--mainer7部分-->
+<div class="mainer7">
+    <div class="mainer7_one clearfix">
+        <div class="mainer7_one_one clearfix">
+            <ul class="clearfix">
+                <li>
+                    <a href="javascript:;">
+                        <span class="fa fa-weibo"></span><br>会员登录
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <span class="iconfont icon-weixingongzhonghao"></span><br>微信公众号
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <span class="iconfont icon-lianxiwomen"></span><br>联系我们
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="mainer7_two">
+        <p>《中华人民共和国增值电信业务经营许可证》浙B2-20110190</p>
+        <p>浙公网安备 33078202000022号</p>
+    </div>
 </div>
 <!--引入flexible插件-->
 <script src="js/flexible.js"></script>
