--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
             <div class="swiper-slide">
                 <img src="img/banner_five.jpg" alt="">
             </div>
-            <div class="swiper-slide">
-                <img src="img/banner_six.jpg" alt="">
-            </div>
         </div>
         <!-- 如果需要分页器 -->
         <div class="swiper-pagination"></div>
@@ -51,45 +48,11 @@
 </div>
 <!--mainer部分-->
 <div class="mainer">
-<!--mainer1部分-->
+    <!--mainer1部分-->
     <div class="mainer1">
-        <!--mainer1_one部分-->
-        <div class="mainer1_one one">
-            <div class="left1"></div>
-            <h1 class="shop">开店</h1>
-            <img src="img/dian.png" alt="">
-            <h1 class="open">O<span>P</span>EN</h1>
-            <div class="right1"></div>
-        </div>
-        <!--mainer1_two部分-->
-        <div class="mainer1_two a">
-            <a href="javascript:;">选址</a>
-            <a href="javascript:;">进货</a>
-            <a href="javascript:;">装修</a>
-            <a href="javascript:;">营销</a>
-            <a href="javascript:;">促销</a>
-            <a href="javascript:;">导购</a>
-        </div>
-        <!--mainer1_three部分-->
-        <div class="mainer1_three clearfix">
-                <div class="mainer1_top">
-                    <span>热点</span>
-                    <a href="javascript:;">男人的衣柜里不应仅是黑白灰</a>
-                </div>
-                <div class="mainer1_bottom clearfix">
-                    <ul class="clearfix">
-                        <li><a href="javascript:;">男装品牌要怎么选择 当下适合创业者开店项目</a></li>
-                        <li><a href="javascript:;">男装市场怎么样 男装加盟的优势是什么</a></li>
-                        <li><a href="javascript:;">男装促销要怎么玩 洗牌时代下选择怎样的品牌</a></li>
-                        <li><a href="javascript:;">男装加盟注意哪些事项 怎样的男装适合加盟</a></li>
-                    </ul>
-                </div>
-        </div>
-        <!--mainer1_four部分-->
-        <div class="mainer1_four">
             <ul>
                 <li>
-                    <a href="javascript:;">
+                    <a href="shop.html">
                         <img src="img/mainer1_four_one.jpg" alt="">
                         <span>职业装</span>
                     </a>
@@ -112,52 +75,153 @@
                         <span>英伦风</span>
                     </a></li>
             </ul>
-        </div>
     </div>
     <!--mainer2部分-->
     <div class="mainer2">
-        <div class="mainer2_one one">
-            <div class="left1"></div>
-            <h1 class="shop">时尚</h1>
-            <img src="img/dian.png" alt="">
-            <h1 class="open">F<span>A</span>SHION</h1>
-            <div class="right1"></div>
+        <!--mainer2_one部分-->
+        <div class="mainer2_one title">
+            <a href="">热点品牌<span>HOT</span></a>
         </div>
-        <div class="mainer2_two a">
-            <a href="javascript:;">男装品牌秀</a>
-            <a href="javascript:;">品牌大全</a>
-            <a href="javascript:;">广东男装品牌</a>
-        </div>
-        <div class="mainer2_three">
-            <div class="mainer2_left">
-                <h3><a href="javascript:;">它钴</a></h3>
-                <p>帮您轻松应对时尚派对的着装需求...
-                    <a href="javascript:;" class="fa fa-angle-double-right"></a>
-                </p>
-            </div>
-            <div class="mainer2_right">
-                <a href="javascript:;">
-                    <img src="img/mainer2_three.jpg" alt="">
-                </a>
-            </div>
-        </div>
+        <!--mainer2_two部分-->
+        <div class="mainer2_two clearfix">
+        <a href="content.html">
+            <dl>
+                <dt>
+                    <img src="img/main_one.jpg" alt="">
+                </dt>
+                <dd>罗蒙男装</dd>
+                <dd class="fg">商务休闲</dd>
+            </dl>
+        </a>
+        <a href="javascript:;">
+            <dl class="no">
+                <dt>
+                    <img src="img/main_two.jpg" alt="">
+                </dt>
+                <dd>佐纳利男装</dd>
+                <dd class="fg">商务休闲</dd>
+            </dl>
+        </a>
+        <a href="javascript:;">
+            <dl>
+                <dt>
+                    <img src="img/main_three.jpg" alt="">
+                </dt>
+                <dd>SASLAX男装</dd>
+                <dd class="fg">英伦风格</dd>
+            </dl>
+        </a>
+        <a href="javascript:;">
+            <dl class="no">
+                <dt>
+                    <img src="img/main_four.jpg" alt="">
+                </dt>
+                <dd>它钴男装</dd>
+                <dd class="fg">商务休闲</dd>
+            </dl>
+        </a>
+        <a href="javascript:;">
+            <dl>
+                <dt>
+                    <img src="img/main_five.jpg" alt="">
+                </dt>
+                <dd>卧虎藏龙男装</dd>
+                <dd class="fg">英伦风格</dd>
+            </dl>
+        </a>
+        <a href="javascript:;">
+            <dl class="no">
+                <dt>
+                    <img src="img/main_six.jpg" alt="">
+                </dt>
+                <dd>秋意浓男装</dd>
+                <dd class="fg">职业正装</dd>
+            </dl>
+        </a>
+        <a href="javascript:;">
+            <dl>
+                <dt>
+                    <img src="img/main_seven.jpg" alt="">
+                </dt>
+                <dd>富绅男装</dd>
+                <dd class="fg">商务休闲</dd>
+            </dl>
+        </a>
+        <a href="javascript:;">
+            <dl class="no">
+                <dt>
+                    <img src="img/main_eight.jpg" alt="">
+                </dt>
+                <dd>添多利男装</dd>
+                <dd class="fg">职业正装</dd>
+            </dl>
+        </a>
+    </div>
     </div>
     <!--mainer3部分-->
-    <div class="mainer3">
-        <!--mainer3_one部分-->
-        <div class="mainer3_one one">
-            <div class="left1"></div>
-            <h1 class="shop">品牌新闻</h1>
-            <img src="img/dian.png" alt="">
-            <h1 class="open">N<span>E</span>WS</h1>
-            <div class="right1"></div>
+    <div class="mainer3 title1">
+        <a href="">查看更多男装品牌
+        <span class="fa fa-chevron-right"></span>
+        </a>
+    </div>
+    <!--mainer4部分-->
+    <div class="mainer4">
+        <div class="mainer4_one title">
+            <a href="">男装款式<span>PRODUCT</span></a>
         </div>
-        <!--mainer3_two部分-->
-        <div class="mainer3_two">
+        <div class="mainer4_two clearfix">
+            <a href="">
+                <dl>
+                    <dt>
+                        <img src="img/dl_one.jpg" alt="">
+                    </dt>
+                    <dd>男装<span>2017秋冬装</span></dd>
+                </dl>
+            </a>
+            <a href="">
+                <dl class="no1">
+                    <dt>
+                        <img src="img/dl_two.jpg" alt="">
+                    </dt>
+                    <dd>A.WPROJECT男装<span>2018春夏装</span></dd>
+                </dl>
+            </a>
+            <a href="">
+                <dl>
+                    <dt>
+                        <img src="img/dl_three.jpg" alt="">
+                    </dt>
+                    <dd>男装 <span>2017秋冬装</span></dd>
+                </dl>
+            </a>
+            <a href="">
+                <dl class="no1">
+                    <dt>
+                        <img src="img/dl_four.jpg" alt="">
+                    </dt>
+                    <dd>老人头男装<span>2017秋冬装</span></dd>
+                </dl>
+            </a>
+        </div>
+    </div>
+    <!--mainer5部分-->
+    <div class="mainer5 title1">
+        <a href="">查看更多男装品牌
+            <span class="fa fa-chevron-right"></span>
+        </a>
+    </div>
+    <!--mainer6部分-->
+    <div class="mainer6">
+        <!--mainer6_one部分-->
+        <div class="mainer6_one title">
+            <a href="">品牌新闻<span>NEWS</span></a>
+        </div>
+        <!--mainer6_two部分-->
+        <div class="mainer6_two">
             <img src="img/mainer3_two.jpg" alt="">
         </div>
-        <!--mainer3_three部分-->
-        <div class="mainer3_three">
+        <!--mainer6_three部分-->
+        <div class="mainer6_three">
             <ul>
                 <li><a onclick="zixun()" class="pinpai active" href="javascript:;">品牌咨询</a></li>
                 <li><a onclick="dongtai()" class="qiye" href="javascript:;">企业动态</a></li>
@@ -165,8 +229,8 @@
                 <li><a onclick="kaidian()" class="shop" href="javascript:;">开店常识</a></li>
             </ul>
         </div>
-        <!--mainer3_four部分-->
-        <div class="mainer3_four">
+        <!--mainer6_four部分-->
+        <div class="mainer6_four">
             <ul id="ul1">
                 <li><a href="javascript:;">什么样的男人最性感 你的西装穿对了吗？</a></li>
                 <li><a href="javascript:;">军旅风男装 打造更加帅气的你</a></li>
@@ -193,117 +257,30 @@
             </ul>
         </div>
     </div>
-    <!--mainer4部分-->
-    <div class="mainer4">
-        <div class="mainer4_one one">
-            <div class="left1"></div>
-            <h1 class="shop">最新品牌</h1>
-            <img src="img/dian.png" alt="">
-            <h1 class="open">B<span>R</span>AND</h1>
-            <div class="right1"></div>
-        </div>
-        <div class="mainer4_two">
-            <ul>
-                <li>
-                    <div class="mainer4_left">
+    <!--mainer7部分-->
+    <div class="mainer7">
+        <div class="mainer7_one clearfix">
+            <div class="mainer7_one_one clearfix">
+                <ul class="clearfix">
+                    <li>
                         <a href="javascript:;">
-                            <img src="img/mainer4_one.jpg" alt="">
+                            <span class="fa fa-weibo"></span><br>会员登录
                         </a>
-                    </div>
-                    <div class="mainer4_right">
-                        <div class="mainer4_top">
-                            <a href="javascript:;">纽约街头品牌NOAH 2018秋冬最新男装特辑</a>
-                        </div>
-                        <div class="mainer4_bottom">
-                            <p>01-04</p>
-                        </div>
-                    </div>
-                </li>
-                <li class="nan">
-                    <div class="mainer4_left1">
-                        <a href="javascript:;"><img src="img/mainer4_two.jpg" alt=""></a>
-                    </div>
-                    <div class="mainer4_right1">
-                        <div class="mainer4_top1">
-                            <a href="javascript:;">街头品牌A BATHING APE;2018春夏潮品新改变</a>
-                        </div>
-                        <div class="mainer4_bottom1">
-                            <p>01-04</p>
-                        </div>
-                    </div>
-                </li>
-                <li class="nan">
-                    <div class="mainer4_left1">
+                    </li>
+                    <li>
                         <a href="javascript:;">
-                            <img src="img/mainer4_three.jpg" alt="">
+                            <span class="iconfont icon-weixingongzhonghao"></span><br>微信公众号
                         </a>
-                    </div>
-                    <div class="mainer4_right1">
-                        <div class="mainer4_top1">
-                            <a href="javascript:;">潮男工装风格穿搭街拍 热门的穿搭风格</a>
-                        </div>
-                        <div class="mainer4_bottom1">
-                            <p>01-03</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="mainer4_left">
+                    </li>
+                    <li>
                         <a href="javascript:;">
-                            <img src="img/mainer4_four.jpg" alt="">
+                            <span class="iconfont icon-lianxiwomen"></span><br>联系我们
                         </a>
-                    </div>
-                    <div class="mainer4_right">
-                        <div class="mainer4_top">
-                            <a href="javascript:;">潮流品牌Gosha Rubchinskiy 2018春夏男装型录</a>
-                        </div>
-                        <div class="mainer4_bottom">
-                            <p>01-03</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="mainer4_left">
-                        <a href="shop.html">
-                            <img src="img/mainer4_five.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="mainer4_right">
-                        <div class="mainer4_top">
-                            <a href="javascript:;">2018最新型男搭配 温暖有型的层次穿搭</a>
-                        </div>
-                        <div class="mainer4_bottom">
-                            <p>01-03</p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <!--mainer5部分-->
-    <div class="mainer5">
-        <div class="mainer5_one clearfix">
-        <div class="mainer5_one_one clearfix">
-            <ul class="clearfix">
-                <li>
-                    <a href="javascript:;">
-                        <span class="iconfont icon-denglu-huiyuan"></span><br>会员登录
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;">
-                        <span class="iconfont icon-weixingongzhonghao"></span><br>微信公众号
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;">
-                        <span class="iconfont icon-lianxiwomen"></span><br>联系我们
-                    </a>
-                </li>
-            </ul>
-        </div>
-        </div>
-        <div class="mainer5_two">
+        <div class="mainer7_two">
             <p>《中华人民共和国增值电信业务经营许可证》浙B2-20110190</p>
             <p>浙公网安备 33078202000022号</p>
         </div>
@@ -330,7 +307,7 @@
         </a>
         <a href="javascript:;">
             <i class="iconfont icon-gouwuche1"></i>
-            <p class="shop">购物车</p>
+            <p class="shop1">购物车</p>
         </a>
     </div>
 </div>
