--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="mainer2">
         <!--mainer2_one部分-->
         <div class="mainer2_one title">
-            <a href="">热点品牌<span>HOT</span></a>
+            <a href="javascript:;">热点品牌<span>HOT</span></a>
         </div>
         <!--mainer2_two部分-->
         <div class="mainer2_two clearfix">
@@ -160,17 +160,17 @@
     </div>
     <!--mainer3部分-->
     <div class="mainer3 title1">
-        <a href="">查看更多男装品牌
+        <a href="javascript:;">查看更多男装品牌
         <span class="fa fa-chevron-right"></span>
         </a>
     </div>
     <!--mainer4部分-->
     <div class="mainer4">
         <div class="mainer4_one title">
-            <a href="">男装款式<span>PRODUCT</span></a>
+            <a href="javascript:;">男装款式<span>PRODUCT</span></a>
         </div>
         <div class="mainer4_two clearfix">
-            <a href="">
+            <a href="javascript:;">
                 <dl>
                     <dt>
                         <img src="img/dl_one.jpg" alt="">
@@ -178,7 +178,7 @@
                     <dd>男装<span>2017秋冬装</span></dd>
                 </dl>
             </a>
-            <a href="">
+            <a href="javascript:;">
                 <dl class="no1">
                     <dt>
                         <img src="img/dl_two.jpg" alt="">
@@ -186,7 +186,7 @@
                     <dd>A.WPROJECT男装<span>2018春夏装</span></dd>
                 </dl>
             </a>
-            <a href="">
+            <a href="javascript:;">
                 <dl>
                     <dt>
                         <img src="img/dl_three.jpg" alt="">
@@ -194,7 +194,7 @@
                     <dd>男装 <span>2017秋冬装</span></dd>
                 </dl>
             </a>
-            <a href="">
+            <a href="javascript:;">
                 <dl class="no1">
                     <dt>
                         <img src="img/dl_four.jpg" alt="">
@@ -206,7 +206,7 @@
     </div>
     <!--mainer5部分-->
     <div class="mainer5 title1">
-        <a href="">查看更多男装品牌
+        <a href="javascript:;">查看更多男装品牌
             <span class="fa fa-chevron-right"></span>
         </a>
     </div>
@@ -214,7 +214,7 @@
     <div class="mainer6">
         <!--mainer6_one部分-->
         <div class="mainer6_one title">
-            <a href="">品牌新闻<span>NEWS</span></a>
+            <a href="javascript:;">品牌新闻<span>NEWS</span></a>
         </div>
         <!--mainer6_two部分-->
         <div class="mainer6_two">
